--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -4,11 +4,13 @@
     ~/.zshrc: zshrc
     ~/.oh-my-zsh: oh-my-zsh/
     ~/.vim: vim/
+    ~/.vimrc: vimrc
     ~/.gitconfig: gitconfig
     ~/.zsh-custom: zsh/
 
 - shell: [
-        ["git submodule update --init --recursive", "Installing submodules"],
-	[./setup-scripts/brew.sh, "Installing brew kegs"],
-        [./setup-scripts/cask.sh, "Installing brew casks"]
+    ["git submodule update --init --recursive", "Installing submodules"],
+	["cp ./zsh/plugins/* oh-my-zsh/plugins/", "Copying custom zsh plugins"],
+    [./setup-scripts/brew.sh, "Installing brew kegs"],
+    [./setup-scripts/cask.sh, "Installing brew casks"]
     ]
